--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pm2examen2grupo6">
 
-    <!-- Permisos necesarios -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- WRITE_EXTERNAL_STORAGE solo para SDK <= 28 -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- La cámara es opcional -->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -26,12 +23,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PM2Examen2Grupo6"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDRD9YJEWsGhYtmKs4INmFAWjuH9-LALVA" />
+
+        <activity
+            android:name=".MapActivity"
+            android:exported="false" />
 
         <activity
             android:name=".ListaAudiosActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
